--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,6 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>cz.cvut.kbss.jopa</groupId>-->
-<!--            <artifactId>jopa-impl</artifactId>-->
-<!--            <version>${cz.cvut.kbss.jopa.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -59,19 +54,12 @@
             <artifactId>commons-text</artifactId>
             <version>1.12.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>cz.cvut.kbss.jopa</groupId>-->
-<!--            <artifactId>jopa-maven-plugin</artifactId>-->
-<!--            <version>${cz.cvut.kbss.jopa.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>cz.cvut.kbss.jopa</groupId>-->
-<!--            <artifactId>ontodriver-jena</artifactId>-->
-<!--            <version>${cz.cvut.kbss.jopa.version}</version>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.16</version>
+        </dependency>
     </dependencies>
-
     <build>
         <resources>
             <resource>
@@ -115,6 +103,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>        </plugins>
+            </plugin>
+        </plugins>
     </build>
 </project>
