--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,12 @@
 
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>liphtools</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.2</version>
     <packaging>pom</packaging>
     <modules>
         <module>util</module>
         <module>liph</module>
+        <module>derivations</module>
         <module>gs</module>
     </modules>
 
