--- a/gs/pom.xml
+++ b/gs/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>1.2.0</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>gs</artifactId>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>liph</artifactId>
-            <version>1.2.0</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
