--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,17 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <liphtools.version>1.3.0</liphtools.version>
     </properties>
-
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>liphtools</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>util</module>
         <module>liph</module>
         <module>gs</module>
+        <module>model</module>
     </modules>
 
     <dependencyManagement>
