--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <liphtools.version>1.3.0</liphtools.version>
+        <liphtools.version>1.4.0</liphtools.version>
     </properties>
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>liphtools</artifactId>
-    <version>1.4.0</version>
+    <version>1.5.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>util</module>
@@ -20,6 +20,7 @@
         <module>derivations</module>
         <module>gs</module>
         <module>model</module>
+        <module>importing</module>
     </modules>
 
     <dependencyManagement>
@@ -61,6 +62,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>1.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.8</version>
         </dependency>
     </dependencies>
 </project>
