--- a/importing/pom.xml
+++ b/importing/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>commons-csv</artifactId>
             <version>1.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>cz.cvut.kbss.jopa</groupId>
+            <artifactId>ontodriver-jena</artifactId>
+            <version>${cz.cvut.kbss.jopa.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
