--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </properties>
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>liphtools</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>1.5.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>util</module>
