--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cz.cvut.kbss.jopa.version>2.1.0</cz.cvut.kbss.jopa.version>
     </properties>
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>liphtools</artifactId>
-    <version>1.5.0</version>
+    <version>1.6.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>util</module>
@@ -21,6 +20,7 @@
         <module>gs</module>
         <module>model</module>
         <module>importing</module>
+        <module>webapp</module>
     </modules>
 
     <dependencyManagement>
