pagination of results

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -5,3 +5,54 @@ it.unict.gallosiciliani.ns=https://gallosiciliani.unict.it/ns/
 it.unict.gallosiciliani.persistence.ontology-physical-uri-key=file:/home/cristiano/Private/assegnogalloitalico/liph-tools/nicosiaesperlinga.ttl
 it.unict.gallosiciliani.persistence.jena-storage-type=file
 logging.level.root=DEBUG
+it.unict.gallosiciliani.paging.pages[0].label=A
+it.unict.gallosiciliani.paging.pages[0].selector=^a.*
+it.unict.gallosiciliani.paging.pages[1].label=B
+it.unict.gallosiciliani.paging.pages[1].selector=^b.*
+it.unict.gallosiciliani.paging.pages[2].label=C
+it.unict.gallosiciliani.paging.pages[2].selector=^c.*
+it.unict.gallosiciliani.paging.pages[3].label=D
+it.unict.gallosiciliani.paging.pages[3].selector=^d.*
+it.unict.gallosiciliani.paging.pages[4].label=E
+it.unict.gallosiciliani.paging.pages[4].selector=^e.*
+it.unict.gallosiciliani.paging.pages[5].label=F
+it.unict.gallosiciliani.paging.pages[5].selector=^f.*
+it.unict.gallosiciliani.paging.pages[6].label=G
+it.unict.gallosiciliani.paging.pages[6].selector=^g.*
+it.unict.gallosiciliani.paging.pages[7].label=I
+it.unict.gallosiciliani.paging.pages[7].selector=^i.*
+it.unict.gallosiciliani.paging.pages[8].label=L
+it.unict.gallosiciliani.paging.pages[8].selector=^l.*
+it.unict.gallosiciliani.paging.pages[9].label=M
+it.unict.gallosiciliani.paging.pages[9].selector=^m.*
+it.unict.gallosiciliani.paging.pages[10].label=N
+it.unict.gallosiciliani.paging.pages[10].selector=^n.*
+it.unict.gallosiciliani.paging.pages[11].label=O
+it.unict.gallosiciliani.paging.pages[11].selector=^o.*
+it.unict.gallosiciliani.paging.pages[12].label=P
+it.unict.gallosiciliani.paging.pages[12].selector=^p.*
+it.unict.gallosiciliani.paging.pages[13].label=q
+it.unict.gallosiciliani.paging.pages[13].selector=^q.*
+it.unict.gallosiciliani.paging.pages[14].label=R
+it.unict.gallosiciliani.paging.pages[14].selector=^r.*
+it.unict.gallosiciliani.paging.pages[15].label=S
+it.unict.gallosiciliani.paging.pages[15].selector=^s.*
+it.unict.gallosiciliani.paging.pages[16].label=T
+it.unict.gallosiciliani.paging.pages[16].selector=^t.*
+it.unict.gallosiciliani.paging.pages[17].label=U
+it.unict.gallosiciliani.paging.pages[17].selector=^u.*
+it.unict.gallosiciliani.paging.pages[18].label=V
+it.unict.gallosiciliani.paging.pages[18].selector=^v.*
+it.unict.gallosiciliani.paging.pages[19].label=Z
+it.unict.gallosiciliani.paging.pages[19].selector=^z.*
+
+
+
+
+
+
+
+
+
+
+
