--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=GallosicilianiKBFrontend
-# see https://stackoverflow.com/questions/50225180/internationalization-locale-not-working-with-accents-in-java-spring-boot
 spring.messages.encoding=UTF-8
 it.unict.gallosiciliani.ns=https://gallosiciliani.unict.it/ns/
 it.unict.gallosiciliani.persistence.ontology-physical-uri-key=nicosiaesperlinga.ttl
 it.unict.gallosiciliani.persistence.jena-storage-type=in-memory
-it.unict.gallosiciliani.paging.pages[0].label=A-L
-it.unict.gallosiciliani.paging.pages[0].selector=^[a-l].*
-it.unict.gallosiciliani.paging.pages[1].label=M-Z
-it.unict.gallosiciliani.paging.pages[1].selector=^[m-z].*
+it.unict.gallosiciliani.paging.pages[0].label=A-B
+it.unict.gallosiciliani.paging.pages[0].selector=^[a-b].*
+it.unict.gallosiciliani.paging.pages[1].label=C-Z
+it.unict.gallosiciliani.paging.pages[1].selector=^[c-z].*
 
 logging.level.root=INFO
