--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -17,13 +17,16 @@
         <log4j2.version>2.24.1</log4j2.version>
     </properties>
 
+    <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>webapp</artifactId>
+    <version>1.6.0</version>
+
 
     <dependencies>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>model</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>1.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
