#4 corrected PDFBox parsing issue about accented letters with diacritics

--- a/importing/pom.xml
+++ b/importing/pom.xml
@@ -52,7 +52,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        it.unict.gallosiciliani.importing.Main
+                                        it.unict.gallosiciliani.importing.OntologyBuilder
                                     </mainClass>
                                 </manifest>
                             </archive>
