--- a/derivations/pom.xml
+++ b/derivations/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>1.6.1</version>
+        <version>1.7.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>derivations</artifactId>
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>liph</artifactId>
-            <version>1.6.1</version>
+            <version>1.7.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
