--- a/importing/pom.xml
+++ b/importing/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>1.6.1</version>
+        <version>1.7.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>importing</artifactId>
@@ -14,12 +14,12 @@
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>model</artifactId>
-            <version>1.6.1</version>
+            <version>1.7.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>gs</artifactId>
-            <version>1.6.1</version>
+            <version>1.7.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
@@ -47,7 +47,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        it.unict.gallosiciliani.importing.OntologyBuilder
+                                        it.unict.gallosiciliani.importing.api.OntologyBuilder
                                     </mainClass>
                                 </manifest>
                             </archive>
