--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </properties>
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>liphtools</artifactId>
-    <version>1.6.1</version>
+    <version>1.7.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>util</module>
