--- a/util/pom.xml
+++ b/util/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>1.6.1</version>
+        <version>1.7.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>util</artifactId>
