--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>webapp</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.7.0</version>
 
 
     <dependencies>
