--- a/liph/pom.xml
+++ b/liph/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>1.8.0-SNAPSHOT</version>
+        <version>1.8.0</version>
     </parent>
 
     <artifactId>liph</artifactId>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>util</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.8.0</version>
         </dependency>
     </dependencies>
     <build>
