--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -19,14 +19,14 @@
 
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>webapp</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.8.0</version>
 
 
     <dependencies>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>model</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
