conflicting regex phenomena

--- a/liph/pom.xml
+++ b/liph/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>util</artifactId>
             <version>1.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>dk.brics.automaton</groupId>
+            <artifactId>automaton</artifactId>
+            <version>1.11-8</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
