--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -19,14 +19,21 @@
 
     <groupId>it.unict.gallosiciliani</groupId>
     <artifactId>webapp</artifactId>
-    <version>1.8.1</version>
-
+    <version>1.8.2</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>model</artifactId>
-            <version>1.8.1</version>
+            <version>1.8.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -48,5 +55,4 @@
         </dependency>
 
     </dependencies>
-
 </project>
