using a local copy of nicosiaesperlinga.ttl

--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -1,8 +1,7 @@
+spring.main.allow-bean-definition-overriding=true
 spring.application.name=GallosicilianiKBFrontend
 spring.messages.encoding=UTF-8
-it.unict.gallosiciliani.ns=https://gallosiciliani.unict.it/ns/
-it.unict.gallosiciliani.persistence.ontology-physical-uri-key=nicosiaesperlinga.ttl
-it.unict.gallosiciliani.persistence.jena-storage-type=in-memory
+it.unict.gallosiciliani.loadData=false
 it.unict.gallosiciliani.paging.pages[0].label=A-B
 it.unict.gallosiciliani.paging.pages[0].selector=^[a-b].*
 it.unict.gallosiciliani.paging.pages[1].label=C-Z
