#11 frontend for derivations

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=GallosicilianiKBFrontend
 # see https://stackoverflow.com/questions/50225180/internationalization-locale-not-working-with-accents-in-java-spring-boot
-server.port=80
+import static org.junit.jupiter.api.Assertions.assertSame;
+#server.port=80
 spring.messages.encoding=UTF-8
 logging.level.root=INFO
 it.unict.gallosiciliani.paging.pages[0].label=A
