--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -53,6 +53,16 @@
             <version>1.9.0</version>
         </dependency>
         <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>gs</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>derivations</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
