--- a/importing/pom.xml
+++ b/importing/pom.xml
@@ -22,6 +22,11 @@
             <version>1.9.0</version>
         </dependency>
         <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>sicilian</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>3.0.3</version>
