--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -63,6 +63,11 @@
             <version>1.9.0</version>
         </dependency>
         <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>sicilian</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
