sicilian etymon finder

--- a/sicilian/pom.xml
+++ b/sicilian/pom.xml
@@ -10,4 +10,59 @@
     </parent>
 
     <artifactId>sicilian</artifactId>
+    <build>
+        <finalName>sicilianToNiSp</finalName>
+        <resources>
+            <resource>
+                <directory>../ns/lexica</directory>
+                <includes>
+                    <include>nicosiaesperlinga.ttl</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>VS.txt</include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        it.unict.gallosiciliani.sicilian.SicilianToNicosiaESperlingaDerivations
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>model</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>gs</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+    </dependencies>
 </project>
