#20 moving the development of this feature to a new branch

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -16,6 +16,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>it.unict.gallosiciliani</groupId>
+            <artifactId>liph</artifactId>
+            <version>1.11.0</version>
+        </dependency>
+        <dependency>
             <groupId>cz.cvut.kbss.jopa</groupId>
             <artifactId>jopa-impl</artifactId>
             <version>${cz.cvut.kbss.jopa.version}</version>
