--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=GallosicilianiKBFrontend
 # see https://stackoverflow.com/questions/50225180/internationalization-locale-not-working-with-accents-in-java-spring-boot
-import static org.junit.jupiter.api.Assertions.assertSame;
 #server.port=80
 spring.messages.encoding=UTF-8
 logging.level.root=INFO
+it.unict.gallosiciliani.jena-storage-type=file
 it.unict.gallosiciliani.paging.pages[0].label=A
 it.unict.gallosiciliani.paging.pages[0].selector=^[aàáä].*
 it.unict.gallosiciliani.paging.pages[1].label=B
