--- a/importing/pom.xml
+++ b/importing/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.0</version>
     </parent>
 
     <artifactId>importing</artifactId>
@@ -14,12 +14,12 @@
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>gs</artifactId>
-            <version>2.0.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>sicilian</artifactId>
-            <version>2.0.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
