--- a/sicilian/pom.xml
+++ b/sicilian/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.unict.gallosiciliani</groupId>
         <artifactId>liphtools</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.0</version>
     </parent>
 
     <artifactId>sicilian</artifactId>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>gs</artifactId>
-            <version>2.0.0</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
