--- a/liph/pom.xml
+++ b/liph/pom.xml
@@ -41,20 +41,20 @@
             <version>1.11-8</version>
         </dependency>
         <dependency>
-            <groupId>com.github.galigator.openllet</groupId>
+            <groupId>it.unict.gallosiciliani.openllet</groupId>
             <artifactId>openllet-jena</artifactId>
-            <version>2.6.6-SNAPSHOT</version>
+            <version>2.6.6</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.jena</groupId>
-                    <artifactId>jena-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.jena</groupId>
-                    <artifactId>jena-arq</artifactId>
-                </exclusion>
-            </exclusions>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.jena</groupId>-->
+<!--                    <artifactId>jena-core</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.jena</groupId>-->
+<!--                    <artifactId>jena-arq</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
 
     </dependencies>
