--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -47,19 +47,19 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.galigator.openllet</groupId>
+            <groupId>it.unict.gallosiciliani.openllet</groupId>
             <artifactId>openllet-jena</artifactId>
-            <version>2.6.6-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.jena</groupId>
-                    <artifactId>jena-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.jena</groupId>
-                    <artifactId>jena-arq</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>2.6.6</version>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.jena</groupId>-->
+<!--                    <artifactId>jena-core</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.jena</groupId>-->
+<!--                    <artifactId>jena-arq</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
 
         <dependency>
