--- a/gs-derivationsimporter/pom.xml
+++ b/gs-derivationsimporter/pom.xml
@@ -9,27 +9,13 @@
         <version>2.1.0</version>
     </parent>
 
-    <artifactId>importing</artifactId>
+    <artifactId>gsderivationsimporter</artifactId>
+    <description>Extract derivations from a derivations file and put them in a OWL ontology which must contain the derivation lemmas.</description>
     <dependencies>
         <dependency>
             <groupId>it.unict.gallosiciliani</groupId>
             <artifactId>derivations</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>it.unict.gallosiciliani</groupId>
-            <artifactId>gs</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>3.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-csv</artifactId>
-            <version>1.12.0</version>
         </dependency>
     </dependencies>
 </project>
