--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>pdfimporter</module>
         <module>csvimporter</module>
         <module>sicilian-derivationbuilder</module>
+        <module>gs-derivationsimporter</module>
     </modules>
 
     <dependencyManagement>
