--- a/gs-derivationsimporter/pom.xml
+++ b/gs-derivationsimporter/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.17</version>
         </dependency>
+        <dependency>
+            <groupId>it.unict.gallosiciliani.openllet</groupId>
+            <artifactId>openllet-jena</artifactId>
+            <version>2.6.6</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
