--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -2,6 +2,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.application.name=GallosicilianiKBFrontend
 spring.messages.encoding=UTF-8
 it.unict.gallosiciliani.jena-storage-type=in-memory
+it.unict.gallosiciliani.file=notrelevant
 it.unict.gallosiciliani.loadData=false
 it.unict.gallosiciliani.paging.pages[0].label=A-B
 it.unict.gallosiciliani.paging.pages[0].selector=^[a-b].*
