--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -47,6 +47,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>projects</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>it.unict.gallosiciliani.openllet</groupId>
             <artifactId>openllet-jena</artifactId>
             <version>2.6.6</version>
