Disable sparql endpoint #64

--- a/webapp/src/test/resources/application.properties
+++ b/webapp/src/test/resources/application.properties
@@ -4,9 +4,9 @@ spring.messages.encoding=UTF-8
 it.unict.gallosiciliani.jena-storage-type=in-memory
 it.unict.gallosiciliani.file=notrelevant
 it.unict.gallosiciliani.loadData=false
+it.unict.gallosiciliani.sparql=true
 it.unict.gallosiciliani.paging.pages[0].label=A-B
 it.unict.gallosiciliani.paging.pages[0].selector=^[a-b].*
 it.unict.gallosiciliani.paging.pages[1].label=C-Z
 it.unict.gallosiciliani.paging.pages[1].selector=^[c-z].*
-
 logging.level.root=INFO
