toolchain: derivations imported #79

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=GallosicilianiKBFrontend
 spring.messages.encoding=UTF-8
 logging.level.root=INFO
 it.unict.gallosiciliani.jena-storage-type=file
-it.unict.gallosiciliani.file=nicosiaesperlinga-lemmas.ttl
+it.unict.gallosiciliani.file=nicosiaesperlinga.ttl
 it.unict.gallosiciliani.sparql=true
 it.unict.gallosiciliani.paging.pages[0].label=A
 it.unict.gallosiciliani.paging.pages[0].selector=^[aàáä].*
