--- a/gs-derivationsimporter/pom.xml
+++ b/gs-derivationsimporter/pom.xml
@@ -9,7 +9,7 @@
         <version>2.4.0</version>
     </parent>
 
-    <artifactId>gsderivationsimporter</artifactId>
+    <artifactId>gs-derivationsimporter</artifactId>
     <name>GalloSicilian-Derivations importer</name>
     <description>Extract derivations from a derivations file and put them into an OWL ontology which must contain the derivation lemmas.</description>
     <dependencies>
@@ -24,14 +24,34 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.17</version>
-        </dependency>
-        <dependency>
             <groupId>it.unict.gallosiciliani.openllet</groupId>
             <artifactId>openllet-jena</artifactId>
             <version>2.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>[1.7.32,1.7.99]</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>[1.7.32,1.7.99]</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>[1.7.32,1.7.99]</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>[1.7.32,1.7.99]</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>[1.2.17,1.2.99]</version>
         </dependency>
     </dependencies>
     <build>
@@ -56,6 +76,8 @@
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
+                            <finalName>${project.artifactId}</finalName>
+                            <appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                     </execution>
                 </executions>
